# CFD_SOLVER

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/cfd-preprocess/: CMakeLists.txt  main.cpp
apps/cfd-solve/: CMakeLists.txt  main.cpp
cmake/: CFDSolverConfig.cmake.in
examples/: cavity.json  lid_driven_cavity.cpp
examples/cavity/: case.json
include/cfd/: CFDSolver.hpp
include/cfd/ad/: AutoDiff.hpp  DualNumber.hpp  TapeRecorder.hpp
include/cfd/core/: BoundaryCondition.hpp  Cell.hpp  Face.hpp  Field.hpp  Mesh.hpp  Types.hpp
include/cfd/io/: CaseReader.hpp  Logger.hpp  VTKWriter.hpp
include/cfd/memory/: AlignedAllocator.hpp  MemoryPool.hpp
include/cfd/numerics/: FluxScheme.hpp  GradientScheme.hpp  Interpolation.hpp  Limiter.hpp  TimeIntegration.hpp
include/cfd/parallel/: Communication.hpp  Domain.hpp  MPI_Wrapper.hpp
include/cfd/physics/: NavierStokes.hpp  Physics.hpp  Thermodynamics.hpp  TurbulenceModel.hpp
include/cfd/solvers/: LinearSolver.hpp  Multigrid.hpp  NonlinearSolver.hpp  PressureVelocityCoupling.hpp
src/: CFDSolver.cpp
src/ad/: AutoDiff.cpp  DualNumber.cpp  TapeRecorder.cpp
src/core/: BoundaryCondition.cpp  Cell.cpp  Face.cpp  Field.cpp  Mesh.cpp
src/io/: CaseReader.cpp  Logger.cpp  VTKWriter.cpp
src/memory/: MemoryPool.cpp
src/numerics/: FluxScheme.cpp  GradientScheme.cpp  Interpolation.cpp  Limiter.cpp  TimeIntegration.cpp
src/parallel/: Communication.cpp  Domain.cpp
src/physics/: NavierStokes.cpp  Thermodynamics.cpp  TurbulenceModel.cpp
src/solvers/: LinearSolver.cpp  Multigrid.cpp  NonlinearSolver.cpp  PressureVelocityCoupling.cpp
tests/: CMakeLists.txt
tests/benchmarks/: bench_linear_solver.cpp
tests/integration/: test_cavity.cpp
tests/unit/: test_field.cpp  test_flux.cpp  test_mesh.cpp
