# For now, we'll skip tests as they require Google Test
# Uncomment when Google Test is available

# find_package(GTest REQUIRED)
# include(GoogleTest)

# add_executable(test_mesh unit/test_mesh.cpp)
# target_link_libraries(test_mesh cfd_core GTest::GTest GTest::Main)
# gtest_discover_tests(test_mesh)
